# axum-test

./: Cargo.toml  Shuttle.toml
src/lib/: handlers.rs  lib.rs  startup.rs
static/: index.html
