[package]
name = "axum-test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "axum-test"
path = "src/bin/main.rs"

[lib]
name = "axum_test_lib"
path = "src/lib/lib.rs"

[dependencies]
axum = "0.7.4"
shuttle-axum = { git = "https://github.com/shuttle-hq/shuttle" }
shuttle-runtime = { git = "https://github.com/shuttle-hq/shuttle" }
tokio = { version = "1", features = [ "macros", "rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["fs"] }
